fix color in dark mode

--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -13,7 +13,7 @@
   --global-footer-text-color: #{$grey-color-light};
   --global-footer-link-color: #{$white-color};
   --global-distill-app-color: #{$grey-color};
-  --global-divider-color: rgba(0,0,0,.1);
+  --global-divider-color: rgba(0,0,0,.2);
 
   .fa-sun {
     display : none;
@@ -36,8 +36,8 @@ html[data-theme='dark'] {
   --global-footer-text-color: #{$grey-color-dark};
   --global-footer-link-color: #{$black-color};
   --global-distill-app-color: #{$grey-color-light};
-  // --global-divider-color: #8a8a91;
-  --global-divider-color: #ffa2af;
+  --global-divider-color: #a5a5c0;
+  // --global-divider-color: #ffa2af;
 
   .fa-sun {
     padding-left: 10px;
